Change web link to github repo

--- a/plugin.ini
+++ b/plugin.ini
@@ -3,7 +3,7 @@ name="Link External Data"
 author="Geneviève Cron / SciencesPo"
 description="Connects a collection to an URL that gives access to external digital data"
 license="GPLv3"
-link="http://omeka.org/codex/Plugins/LinkExternalData0.1"
+link="https://github.com/SciencesPoDRIS/LinkExternalData"
 support_link="http://omeka.org/forums/forum/plugins"
 version="0.1"
 omeka_minimum_version="2.0"
